fix: made the input tag invisible in another way

--- a/cssBayan/style/style.css
+++ b/cssBayan/style/style.css
@@ -41,7 +41,8 @@ h2 {
 }
 
 .accordion-elem>input {
-    display: none;
+    height: 0;
+    padding: 0;
 }
 
 .accordion-title {
